jumbotron hero section added with header, paragraph and button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
                 </div>
             </div>
         </nav>
+
+        <!-- Welcome Section: Jumbotron Header Full Width -->
+        <header class="jumbotron jumbotron-fluid bg-secondary">
+            <div class="container">
+                <div class="col-lg-11 mx-auto text-white">
+                    <h1 class="display-4">Welcome to My Portfolio</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi excepturi laboriosam modi, quae amet ipsum deserunt facilis, quam perferendis vitae ratione! Corporis illo, suscipit minus veniam laborum molestias deserunt assumenda voluptatum laudantium provident ipsum ea animi quia voluptas perferendis esse tenetur quam rem commodi autem obcaecati quo modi sed in? Consectetur, quas sint earum ex porro fugiat ducimus est laudantium perferendis maiores cumque quia fugit assumenda animi, labore ipsa quaerat.</p>
+                    <a href="#" class="btn btn-primary btn-lg">Call to action</a>
+                </div>
+            </div>
+        </header>
+        <!-- Work Section -->
+
+        <!-- My Work -->
+
     </section>
 </body>
 </html>
