--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">My Portfolio</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -65,7 +65,7 @@
         <!-- Work Section -->
 
         <!-- My Work -->
-        <section class="container">
+        <section class="container" id="work">
             <div class="row d-flex justify-content-around mt-8">
                 <h1 class="my-4">My Work</h1>
             </div>
@@ -135,7 +135,7 @@
         </section>
         
         <!--About Me-->
-        <section>
+        <section id="about">
             <div class="container bg-secondary">
                 <div class="row align-items-center">
                     <div class="col-lg-5 order-lg-2">  
@@ -156,6 +156,40 @@
             </div>
         </section>
 
+
+        <!--Footer Section-->
+        <footer class="footer bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 h-100 text-center mx-auto">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item mr-3">
+                             <a href="#">
+                                <i class="fab fa-linkedin fa-3x fa-fw"></i>
+                             </a>   
+                            </li>
+                            <li class="list-inline-item mr-3">
+                                <a href="#">
+                                   <i class="fab fa-twitter-square fa-3x fa-fw"></i>
+                                </a>   
+                               </li>
+                               <li class="list-inline-item mr-3">
+                                <a href="#">
+                                   <i class="fab fa-github fa-3x fa-fw"></i>
+                                </a>   
+                               </li>   
+                        </ul>
+                        <p class="text-muted small mb-4 mb-lg-0">&copy; Mamuunur Rahman 2023</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </footer>
+
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
 </html>
