--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#">Welcome <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
@@ -158,7 +158,7 @@
 
 
         <!--Footer Section-->
-        <footer class="footer bg-light">
+        <footer class="footer bg-light" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center mx-auto">
