--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">My Portfolio</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -32,6 +31,9 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Welcome <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills">Skills <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#work">Work</a>
@@ -50,24 +52,61 @@
         <!-- Welcome Section: Jumbotron Header Full Width -->
         <header class="jumbotron jumbotron-fluid bg-secondary">
             <div class="container">
-                <div class="col-lg-11 mx-auto text-white">
+                <div>
+                    <img class="img-fluid rounded-circle" src="images/profile.jpg" id="profile-img">
+                </div>
+                <div class="col-lg-15 mx-auto text-white" id="welcome">
                     <h1 class="display-4 my-4">Welcome to My Portfolio</h1>
                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi excepturi
                         laboriosam modi, quae amet ipsum deserunt facilis, quam perferendis vitae ratione! Corporis
                         illo, suscipit minus veniam laborum molestias deserunt assumenda voluptatum laudantium provident
-                        ipsum ea animi quia voluptas perferendis esse tenetur quam rem commodi autem obcaecati quo modi
-                        sed in? Consectetur, quas sint earum ex porro fugiat ducimus est laudantium perferendis maiores
-                        cumque quia fugit assumenda animi, labore ipsa quaerat.</p>
+                        ipsum ea animi quia voluptas perferendis esse tenetur quam rem commodi autem obcaecati.</p>
                     <a href="#" class="btn btn-primary btn-lg">Call to action</a>
                 </div>
             </div>
         </header>
-        <!-- Work Section -->
+
+        <!-- Skills Section -->
+        <div class="container" id="skills">
+            <div class="text-center">
+                <h2>Skills</h2>
+                <p>Below are the skills I expect to learn from the bootcamp.</p>
+            </div>    
+            <div class="row">
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="images/HTML5.png" alt="Html Logo" class="language__img" />
+                        </figure>
+                        <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="images/css.png" alt="CSS Logo" class="language__img" />
+                        </figure>
+                        <span class="language__name">CSS</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="images/javascript.png" alt="JavaScript Logo" class="language__img" />
+                        </figure>
+                        <span class="language__name">JavaScript</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="images/react.png" alt="React Logo" class="language__img" />
+                        </figure>
+                        <span class="language__name">React</span>
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
         <!-- My Work -->
         <section class="container" id="work">
             <div class="row d-flex justify-content-around mt-8">
-                <h1 class="my-4">My Work</h1>
+                <h3 class="my-4">My Work</h3>
             </div>
 
             <div class="row justify-content-between text-center mt-8">
@@ -133,15 +172,15 @@
             </div>
 
         </section>
-        
+
         <!--About Me-->
         <section id="about">
             <div class="container bg-secondary">
                 <div class="row align-items-center">
-                    <div class="col-lg-5 order-lg-2">  
-                        <img class="img-fluid rounded-circle" src="images/profile.jpg"/>
+                    <div class="col-lg-5 order-lg-2">
+                        <img class="img-fluid rounded-circle" src="images/profile.jpg" id="profile-img-about"/>
                     </div>
-                
+
                     <div class="col-lg-7 order-lg-1 text-white">
                         <div class="p-5">
                             <h2 class="display-4">About Me</h2>
@@ -152,7 +191,7 @@
                             </a>
                         </div>
                     </div>
-                </div>    
+                </div>
             </div>
         </section>
 
@@ -164,20 +203,20 @@
                     <div class="col-lg-6 h-100 text-center mx-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item mr-3">
-                             <a href="#">
-                                <i class="fab fa-linkedin fa-3x fa-fw"></i>
-                             </a>   
+                                <a href="#">
+                                    <i class="fab fa-linkedin fa-3x fa-fw"></i>
+                                </a>
                             </li>
                             <li class="list-inline-item mr-3">
                                 <a href="#">
-                                   <i class="fab fa-twitter-square fa-3x fa-fw"></i>
-                                </a>   
-                               </li>
-                               <li class="list-inline-item mr-3">
+                                    <i class="fab fa-twitter-square fa-3x fa-fw"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item mr-3">
                                 <a href="#">
-                                   <i class="fab fa-github fa-3x fa-fw"></i>
-                                </a>   
-                               </li>   
+                                    <i class="fab fa-github fa-3x fa-fw"></i>
+                                </a>
+                            </li>
                         </ul>
                         <p class="text-muted small mb-4 mb-lg-0">&copy; Mamuunur Rahman 2023</p>
                     </div>
@@ -188,8 +227,14 @@
         </footer>
 
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+        crossorigin="anonymous"></script>
 </body>
 </html>
